--- a/views/header.ejs
+++ b/views/header.ejs
@@ -28,7 +28,7 @@
         <a href="/"><h1 class="title">Valentine Cards Bot</h1></a>
         <ul class="nav <%= typeof tab != 'undefined' ? tab : '' %>">
           <li role="presentation"><a href="/">Send a card</a></li>
-          <li role="presentation"><a href="/submit">Upload new card</a></li>
+          <li role="presentation"><a href="/upload">Upload new card</a></li>
           <li role="presentation"><a href="/vote">Vote new cards</a></li>
           <li role="presentation"><a href="/categories">Categories</a></li>
           <li role="presentation"><a href="/about">About</a></li>
