--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -4,7 +4,7 @@ if (typeof uploaded != 'undefined' && uploaded) {
   %> The card has been uploaded and now is being moderated! <%
 }
 if (typeof error != 'undefined') {
-  %> <%=error%> <%
+  %> <%-error%> <%
 }
 %>
 <br />
