--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,8 +1,11 @@
 <% include header.ejs %>
 
-<p>Made with love by <a href="https://balbona.me/">NiciusB</a></p>
-<br/><br/>
-<a class="twitter-timeline" href="https://twitter.com/ValentineCardsB" data-widget-id="698930086427361281">Tweets by @ValentineCardsB.</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<div class="about-page">
+  <p>Made with love by <a href="https://balbona.me/">NiciusB</a></p>
+  <p>View on <a href="https://github.com/NiciusB/valentine-cards-bot">GitHub</a></p>
+  <br>
+  <a class="twitter-timeline" href="https://twitter.com/ValentineCardsB" data-widget-id="698930086427361281">Tweets by @ValentineCardsB.</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 
 <% include footer.ejs %>
