--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.min.js"></script>
     <link rel="stylesheet" href="/css/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
-    <link rel="stylesheet" href="/css/main.css?3">
+    <link rel="stylesheet" href="/css/main.css?v=4">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-67731642-4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
